# cavalcade

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.release  README.md  docker-compose.cockroach.yml  docker-compose.hotreload.yml  docker-compose.prod.yml  docker-compose.yml  log4rs.prod.yml  log4rs.yml  notes.md  requirements.in  sqlx-data.json  tomlfmt.toml
.github/: no-annotations.js  rust-panic.json
.sqlx/: query-0d57ab36af89e7e26dc608afb0d1aadf7866435a617043c2d2503e1c42dd6385.json  query-1b09443a855fc883de8af051da48e9a4f7ac5e769889ff10624b5ed4565b9d36.json  query-21cf1426c46f819f5c0bd9c6751e5d09e43d5f4df39c2c9c9b853a01b327d9e5.json  query-338326815b0ff37bda1159cb253334a5f7fa054bfbf3f744e2942ee362194049.json  query-46c2ab3942516ea092d0f033e408bd5d18bb56db420f11d4b2f854d4ef6cc2ff.json  query-494c0e49c3583f76d6a96d0ad7905306d5a6de5210f420a81bace81afec7a77b.json  query-4e43517af153a0d1cc5f364e6e417e7e35efafe35b2281ae78ffb83868f96100.json  query-5124ded66e489de609dbd749fe0c2ece8f85441b6eac8f5050fcb6a55b159b6e.json  query-51bf56064519c902b7fbf91382fa78646f5542bd99793d2bd56d8da254e525db.json  query-55c797db1549c5f9fa0f1528f1d7b9f84e1e3f23cc98b785f148490676679805.json  query-62c76ddd7c04b7249394d5020ad4c75265bf8053acacc9bd78c3ddd9b80bf360.json  query-62f00c31fc32a41134d2c8733db528f5043be40ac2768d8d087ffc13d0537e9a.json  query-8a626bc06d292473557a66b7f473a646ff61c870885b5d4b87a848c80e32e289.json  query-9d0930e105442800649bc4f8e354115a5b0b2f87ceed504085ba4e9a4837f823.json  query-b3ebca91bd76182474a6b5329f98064c8fe4e40f4bfc5e52292e04d76622dacc.json  query-b7c482125259ca09a29a01b91c090e25d33290544c39972a95c64dd00ab4211e.json  query-c9dacc8452436daeaf9f2faaddfa4496512cba917bbc3597e8151d589f7b9d00.json  query-d042484c30d6ef7629d698f535c83d6a4d85e3061925895d48ff3ec31e48b4a4.json  (+4 more)
src/: lib.rs  main.rs  (+3 more)
(+11 files in other folders)
