[package]
edition = "2021"
name = "cavalcade"
version = "0.1.0"
license = "AGPL3"

[dependencies]
amq-protocol = { version = "6", features = ["rustls"], default_features = false }
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "3", default_features = false, features = ["cargo", "std"] }
dotenv = "0.15.0"
lazy_static = "1"
log = "0.4"
log4rs = "1"
regex = "1"
serde = "1"
serde_json = "*"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "offline", "chrono", "uuid"] }
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
celery = "0.4.0-rcn.11"
serial_test = "0.5"
